@@ -54,7 +54,19 @@ if ($basename =~ m/(.*)\/utils\/$/) {
     our $osf_top_dir = $basename;
 }
 
-#print "osf_top_dir = $osf_top_dir\n";
+# ----------------------------------------------------------------------
+# v0.43.0 Change:
+#
+# require user to provide us with a config path (we
+# no longer assume it is local to LosF install since users will likely
+# want to use their own SCM for config files). Config path can be
+# specified in one of two ways:
+# 
+# 1. LOSF_CONFIG_DIR environment variable
+# 2. config/config_dir file in locally running LosF path
+#
+# The environment variable takes precedence over config_dir setting
+# ----------------------------------------------------------------------
 
 # Allow for potential separation of LosF install path and LosF
 # configuration path. By default, we assume a config/ dir local to the
@@ -69,7 +81,6 @@ if ( defined $ENV{'LOSF_CONFIG_DIR'} ) {
 	if($config_dir =~ /(.*)\/$/) {
 	    chop($config_dir);
 	}
-
 	our $osf_config_dir        = $config_dir;
 	our $osf_custom_config_dir = $config_dir;
 ###	our $osf_custom_config = 1;
@@ -77,13 +88,28 @@ if ( defined $ENV{'LOSF_CONFIG_DIR'} ) {
 	MYERROR("LOSF_CONFIG_DIR provided path does not exist ($config_dir)");
     }
 } else {
-    our $osf_config_dir        = "$osf_top_dir/config";
-    our $osf_custom_config_dir = "$osf_top_dir/config";
+    my $local_config_file="$osf_top_dir/config/config_dir";
+    if ( -s $local_config_file ) {
+	open (my $IN,"<$local_config_file") || MYERROR("Unable to open  file ($local_config_file)");
+	my $local_config_dir = <$IN>;
+	chomp($local_config_dir);
+	close($IN);
+
+	if ( -d $local_config_dir ) {
+	    our $osf_config_dir        = "$local_config_dir";
+	    our $osf_custom_config_dir = "$local_config_dir";
+	} else {
+	    print "\nError: A valid LosF config directory was not provided. You must provide a valid config\n";
+	    print "path for your local cluster. You can do this via one of two methods:\n\n";
+	    print "  (1) Set the LOSF_CONFIG_DIR environment variable\n";
+	    print "  (2) Add your desired config path to the file -> $osf_top_dir/config/config_dir\n\n";
+	    print "Example configuration files are availabe at -> $osf_top_dir/config/config_example\n\n";
+	    exit(1);
+	}
+    }
 }
 
 our $osf_utils_dir         = "$osf_top_dir/utils";
-#our $osf_custom_config_dir = "$osf_config_dir";  # <-- note: may be overridden later
-		         
 our $osf_log4perl_dir      = "$osf_utils_dir/dependencies/mschilli-log4perl-d124229/lib";
 our $osf_ini4perl_dir      = "$osf_utils_dir/dependencies/Config-IniFiles-2.68/lib";
 our $osf_term_prompt_dir   = "$osf_utils_dir/dependencies/Term-Prompt-1.04/lib";
